2009-06-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoCalendarComponent.m (-valuesForKeys:)
	overriden method to speed up PROPFIND requests.

2009-06-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/NSArray+Utilities.m (-hasRangeIntersection):
	modified to use the range pointers rather than serialized
	representations.

2009-06-15  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder
	-_appendCycleException:firstInstanceCalendarDateRange:fromRow:forRange:toArray:]):
	for exceptions in the date range, add the boolean key
	"isException" to the dictionary.
	(-_flattenCycleRecords:fetchRange:): renamed method (was
	-fixupCyclicRecords:fetchRange:).

2009-06-12  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/Contacts/UIxContactEditor.m ([UIxContactEditor
	-addressBooksList]): LDAP-based addressbooks must not be
	editable, even for super users.

2009-06-11  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUserFolder.m (-davUserQuery:): do not return
	the user information for the current user.

	* UI/MainUI/SOGoUserHomePage.m (-usersSearchAction): do not return
	the user information for the current user.
	(-foldersSearchAction): the method only search folders for the
	owner of the current folder. The "user" parameter has thus been
	removed.

2009-06-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/NSString+Utilities.m (-stringByDetectingURLs):
	fixed a leak. Fixed a crash on GNUstep by using arrays of pointers
	to NSRange instead of converting/parsing them to/from NSString.

	* SoObjects/SOGo/NSArray+Utilities.m (-addRange): removed method.
	(-addNonNSObject:withSize:copy:): new helper method to add object
	pointers to arrays.
	(-freeNonNSObjects): new helper method to release the above object
	pointers.

	* UI/MailPartViewers/UIxMailPartHTMLViewer.m: fixed rendering of